SERVER-41683 Only check UUID in movePrimary collection cloner